--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,79 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+
+a {
+    text-decoration: none;
+}
+
+h1 {
+  font-size: 1.6rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+:not(h1) > a {
+  font-size: 1rem;
+}
+
+body {
+  height: 100vh;
+  overflow: hidden;
+  font-family: "IBM Plex Sans", Helvetica, sans-serif;
+  font-size: 1rem;
+  line-height: 1rem;
+  background-color: #fff;
+  color: #000;
+  padding: 5px;
+}
+
+p {
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  font-weight: 400;
+}
+
+.h3-header-container {
+  border-bottom: 1px solid #000;
+  padding-bottom: 1.5rem;
+
+}
+
+app-header {
+    border-bottom: 1px solid #000;
+    margin-bottom: 1.5rem;
+
+}
+
+a:hover {
+    color: #888;
+    text-decoration: underline;
+}
+
+@media only screen and (min-width: 768px) {
+  image {
+    display: none;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: #1a202c;
+    color: #fff;
+  }
+
+  .h3-header-container {
+      border-bottom-color: #444;
+  }
+  a {
+    color: #89a;
+  }
+
+  a:hover {
+    color: #fff;
+  }
+}
