--- a/src/app/content/team/team.component.html
+++ b/src/app/content/team/team.component.html
@@ -1,1 +1,18 @@
-<p>team works!</p>
+<h2>Members</h2>
+
+<h3>Jacob Bennet</h3>
+<p>BCS major who is passionate about everything boardgames.</p>
+<h3>Jacob Brink</h3>
+<img alt="Jacob Brink" src="https://raw.githubusercontent.com/CS39X-Team-J/cs39x-team-j.github.io/main/src/images/brink.jpg" />
+<p>
+  I am a BCS major that focuses on front end development. In my free time, I
+  like to play with my cat and go ice skating.
+</p>
+<h3>Andrew Feikema</h3>
+<img alt="Andrew Feikema" src="https://raw.githubusercontent.com/CS39X-Team-J/cs39x-team-j.github.io/main/src/images/andrew.jpg" />
+<p>
+  I'm a BCS major and Math minor from Munster, Indiana. I'm interested in web
+  development and cloud computing and I enjoy programming, running, and cooking.
+</p>
+<h3>Joshua Ridder</h3>
+<p>BCS major who studies Japanese in his free time.</p>
