--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<h1><a (click)="Nav('About')">Livethon Project Site</a></h1>
+<h1><a (click)="Nav('Vision')">Livethon Project Site</a></h1>
 <div class="nav-bar">
   <nav class="link-set">
     <a (click)="Nav('Report')">Report</a>
@@ -7,7 +7,7 @@
   <nav class="link-set">
     <a href="https://github.com/CS39X-Team-J/livethon">Code Base</a>
     <a
-      href="https://docs.google.com/presentation/d/1qmYrC3zW3TkhHLshdquqBdlxiQ45SpRj5BmpwtzIuaM/edit?usp=sharing"
+      href="https://docs.google.com/presentation/d/1g8R8CCZzY5hMBR5zBQQYzHDV0p_2soBT/edit?usp=sharing"
       >Presentation</a
     >
     <a href="https://computing.calvin.edu/">CS Department</a>
