--- a/src/app/content/about/about.component.html
+++ b/src/app/content/about/about.component.html
@@ -1,1 +1,22 @@
-<p>about works!</p>
+<p>
+  Livethon is a web-based coding platform for Python that allows educators to
+  easily provide feedback to students in real time. This platform seeks to
+  facilitate a seamless in-class coding experience that centers rapid and
+  actionable feedback.
+</p>
+<p>
+  Our project's goal is to facilitate and expand access to feedback in in-class
+  lab exercises by enhancing student-instructor interaction. The target end
+  users are students and instructors in introductory Computer Science courses,
+  which primarily use the Python programming language. Our project contains two
+  parts: a basic coding environment for students, and an instructor dashboard to
+  oversee coding submissions.
+</p>
+<p>
+  Our lightweight in-browser code editor provides students with the best of both
+  worlds: an online coding environment that requires no setup and low-latency
+  execution. Instructors will have access to all student code in real time, and
+  will be able to send feedback to students with highlighted code samples. We
+  hope this setup will create a suitable learning environment by eliminating
+  overhead in environment setup and maintenance.
+</p>
