--- a/src/app/content/report/report.component.html
+++ b/src/app/content/report/report.component.html
@@ -1,1 +1,24 @@
-<p>report works!</p>
+<div>
+  <a
+    href="https://docs.google.com/document/d/1LpV_FJ40FWXPJ1FMYKyhc4irAPk_0VJX155Rm4b0x8I/edit?usp=sharing"
+    >Final Report
+  </a>
+  <a
+    href="https://teams.microsoft.com/_?lm=deeplink&lmsrc=NeutralHomePageWeb&cmpid=WebSignIn#/mp4/viewer//https:~2F~2Fcalvincollege-my.sharepoint.com~2Fpersonal~2Fajf34_calvin_edu~2FDocuments~2FRecordings~2FLivethon%20Demo-20220405_214144-Meeting%20Recording.mp4?messageId=1649210118591&fileId=E0F1169E-A397-443D-AED8-CC99EB3338CD&ctx=fileLink&viewerAction=view"
+    >Demo</a
+  >
+  <a href="https://github.com/CS39X-Team-J/Code-Analysis"
+    >Code Analysis Repo
+  </a>
+  <a
+    href="https://docs.google.com/document/d/1t_Uep8ct_bmnpj1kgB6-fzhlYjZdHN3Kuj36FDuAAB4/edit?usp=sharing"
+    >UI Audit</a
+  >
+  <a
+    href="https://docs.google.com/document/d/1_jzK6oCAG4vRRK5TcjH71GebXoUzJ_8Jb24GiJ-2s78/edit?usp=sharing"
+    >UI Audit Retrospective Brainstorm</a
+  >
+  <a href="https://github.com/CS39X-Team-J/livethon/issues"
+    >Future Story Documentation</a
+  >
+</div>
